New in 0.00.75
Changed bar chart elements to have icon on the left, then title and label with same font on the right

New in 0.00.74
Increased readability of categories and values for the stacked bar chart at small sizes
Changed the male/female defaults to:
    Male default height: 5'8", weight 150 lb
    Female default height: 5'5", weight 135 lb
Previously, height and weight were preserved under gender change.  Now the values change to the new defaults when changing gender.
Fixed the animated drag help items to appear on mouse press instead of mouse drag

New in 0.00.73
Muscle diameter for females is 75% of the muscle diameter for males
Added new images and changed order for exercise

New in 0.00.72
Edited help dialog text
Fixed: "Reset All" needs to reset the activity level selector
Balanced diet dialogs are disposed during reset all
Items disappear if you drop them in the play area, but not on the plate/exercise log
Added year month format to control panel
Changed label on graphs from "Time" to "Age"
Changed year month format on graph horizontal axes
Added an animated help message that appears when you start to drag a food or exercise item that suggests you put it on the drop target
Fixed: BMR doesn't reset properly (during reset all) if activity level was changed

New in 0.00.71
Changed the layout to have the green control panel background extend to the top. This required moving some of the play area objects to the right. This was based on the "eating and exercise layout.pdf" in the doc directory as a guide - we used the "Modified 1" layout.
Made the Heart Strength indicator dependent on activity level as well as exercise.  Since the values for exercise and activity are month-long averages, it is inconvenient to set the days for which the person was very-sedentary to zero, so instead the following algorithm is used: activityToCount = max( ( averageActivity - 100 ) * 0.75, 0 )
Made the multiplier for fractionFatLost in MuscleAndFatMassLoss depend on gender: