@@ -1,5 +1,6 @@
 New in 0.00.75
 Changed bar chart elements to have icon on the left, then title and label with same font on the right
+Changed bar chart axis graphics to be more sparse
 
 New in 0.00.74
 Increased readability of categories and values for the stacked bar chart at small sizes
